tests/reference/asr-cptr_01-4e660f1.stderr
semantic error: Indexing CPtr typed expressions is not supported yet
 --> tests/errors/cptr_01.py:5:11
  |
5 |     print(x[0])
  |           ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
